# poetry-dynamic-versioning

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  README.plugin.md  Vagrantfile  pyproject.plugin.toml  pyproject.toml  tasks.py  tox.ini  zzz_poetry_dynamic_versioning.pth
.github/workflows/: main.yaml
docs/: poetry-dynamic-versioning.1
poetry_dynamic_versioning/: __init__.py  __main__.py  backend.py  cli.py  patch.py  plugin.py
tests/: integration.sh  test_integration.py  test_poetry_dynamic_versioning.py  test_unit.py
tests/dependency-classic/: setup.py
tests/dependency-dynamic/: pyproject.toml
tests/dependency-static/: pyproject.toml
tests/project/: pyproject.toml
tests/project-pep621/: pyproject.toml
tests/project/docs/: version.txt
tests/project/project/: __init__.py
