[tool.poetry]
name = "poetry-dynamic-versioning"
version = "0.17.1"
description = "Plugin for Poetry to enable dynamic versioning based on VCS tags"
license = "MIT"
authors = ["Matthew T. Kennerly <mtkennerly@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mtkennerly/poetry-dynamic-versioning"
keywords = ["poetry", "plugin", "version", "versioning", "dynamic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Version Control :: Mercurial",
    "Topic :: Software Development :: Version Control :: Bazaar",
]
include = ["zzz_poetry_dynamic_versioning.pth"]

[tool.poetry.dependencies]
python = "^3.5"
dunamai = "^1.12.0"
tomlkit = ">= 0.4"
jinja2 = [
    { version = "^2.11.1", python = "~3.5" },
    { version = ">=2.11.1, <4", python = "^3.6" },
]
MarkupSafe = { version = "<2", python = "3.5" }

[tool.poetry.dev-dependencies]
pytest = "^4.0"
pre-commit = "^1.16"
black = { version = "^19.3-alpha.0", allow-prereleases = true, python = "^3.6" }
flake8 = "^3.7"
mypy = "^0.740"
pep8-naming = "^0.8.2"

[tool.poetry.scripts]
poetry-dynamic-versioning = 'poetry_dynamic_versioning.__main__:main'

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
