[tool.poetry]
name = "project"
version = "0.0.999"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.5"
dependency-classic = {path = "../dependency-classic"}
dependency-dynamic = {path = "../dependency-dynamic"}
dependency-static = {path = "../dependency-static"}

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.subversion]
tag-dir = "alt/tags"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
